apps/lan/kubernetes-dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ui.k8s.bourne.cloud`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-web
          namespace: kubernetes-dashboard
          port: 8000
          scheme: http
  tls:
    secretName: bourne-cloud-wildcard-tls
